# final_chatbot

./: .gitignore  README.md  advanced_app.py  advanced_prompts.py  advanced_rag.py  advanced_setup.py  chat_logger.py  check_chunks.py  final_load.py  main.py  memory_manager.py  modern_chat.html  multi_agent_system.py  ngrok_config.yml  plain_text_crawled_data (1) (1).txt  prompt_template.py  quality_checker.py  requirements.txt  response_parser.js  run_public.py  setup_and_run.py  setup_ngrok.py  simple_app.py  start_public.bat
.github/workflows/: deploy.yml
backend/: Dockerfile  advanced_prompts.py  advanced_rag.py  api_endpoints.py  app.py  chat_logger.py  memory_manager.py  mongodb_manager.py  multi_agent_system.py  office_status_helper.py  pyproject.toml  quality_checker.py  query_router.py  requirements.txt  s3_data_manager.py  s3_endpoints.py  simple_transcript_api.py
